# voiceguard

./: README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: README.md  assistant.py
evaluation/: benchmark.py  sample_gold_set.json
tests/: test_keyword_policy.py  test_policy.py  test_registry.py  test_service.py
voiceguard/: __init__.py  policy.py  registry.py  service.py
voiceguard/evaluation/: __init__.py  gold_set.py  judge.py
voiceguard/policies/: __init__.py  harm_guard.py  keyword.py  llm_classifier.py  topic.py
