[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voiceguard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai-agents",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
